--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "redux": "^5.0.1",
+    "redux": "4.2.0",
     "redux-thunk": "^3.1.0",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1",
